--- a/_vendor/github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind/layouts/single.html
+++ b/_vendor/github.com/HugoBlox/hugo-blox-builder/modules/blox-tailwind/layouts/single.html
@@ -10,11 +10,12 @@
 {{ end }}
 
 <div class="mx-auto flex max-w-screen-xl">
-  {{ partial "components/sidebar.html" (dict "context" . "no_sidebar" true) }}
+  <!-- {{ partial "components/sidebar.html" (dict "context" . "no_sidebar" true) }} -->
   {{ partial "components/toc.html" . }}
   <article class="w-full break-words flex min-h-[calc(100vh-var(--navbar-height))] min-w-0 justify-center pb-8 pr-[calc(env(safe-area-inset-right)-1.5rem)]">
     <main class="w-full min-w-0 max-w-6xl px-6 pt-4 md:px-12">
-
+      <div class="container mx-auto prose prose-slate lg:prose-xl dark:prose-invert">
+      <div class="ml-0">
       {{ if .Params.show_breadcrumb }}
       <div class="mb-4">
         {{ partial "components/breadcrumb.html" . }}
@@ -111,7 +112,8 @@
           {{ partial "page_links_div.html" . }}
         </div>
       </div>
-
+      </div>
+      </div>
 
 
       {{ $featured := partial "functions/get_featured_image.html" . }}
@@ -251,7 +253,7 @@
       </div>
       {{ end }}
 
-      <div class="prose prose-slate lg:prose-xl dark:prose-invert">
+      <div class="mx-auto prose prose-slate lg:prose-xl dark:prose-invert">
         {{ .Content }}
       </div>
 
